--- a/imports/ui/products/products.html
+++ b/imports/ui/products/products.html
@@ -5,7 +5,7 @@
       <h1>Lista de Productos</h1>
     </header>
     {{> newProduct}}
-    <div class="ui items">
+    <div class="row">
       {{#if Template.subscriptionsReady }}
         {{#each products}}
           {{> product}}
@@ -19,20 +19,16 @@
 </template>
 
 <template name="product">
-  <div class="item">
-    <div class="image">
-      <img src="/image.png">
-    </div>
-    <div class="content">
-      <a class="header" href="/products/{{_id}}">{{name}}</a>
-      <div class="meta">
-        <span>{{description}}</span>
-      </div>
-      <div class="description">
-        <p></p>
-      </div>
-      <div class="extra">
-        {{price}} USD
+  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+    <div class="item">
+      <div class="thumbnail">
+        <img src="/image.png">
+        <div class="caption">
+          <h3><a href="/products/{{_id}}">{{name}}</a></h3>
+          <p>{{description}}</p>
+          <p>{{price}} USD</p>
+          <p><a  href="/products/{{_id}}" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        </div>
       </div>
     </div>
   </div>
