--- a/imports/ui/products/products.html
+++ b/imports/ui/products/products.html
@@ -26,7 +26,7 @@
         <div class="caption">
           <h3><a href="/products/{{_id}}">{{name}}</a></h3>
           <p>{{description}}</p>
-          <p>{{price}} USD</p>
+          <p>{{getLastCost costs}} USD</p>
           <p><a  href="/products/{{_id}}" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
         </div>
       </div>
