saving orders in cart needs

--- a/imports/ui/products/products.html
+++ b/imports/ui/products/products.html
@@ -27,7 +27,7 @@
           <h3><a href="/products/{{_id}}">{{name}}</a></h3>
           <p>{{description}}</p>
           <p>{{getLastCost costs}} USD</p>
-          <p><a  href="/products/{{_id}}" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+          <p><a href="/products/{{_id}}" class="btn btn-primary" role="button">Details</a> <a href="#" class="btn btn-default add-cart" role="button">cart</a></p>
         </div>
       </div>
     </div>
