--- a/imports/ui/favorites/favorites.html
+++ b/imports/ui/favorites/favorites.html
@@ -6,7 +6,7 @@
     </header>
     <div class="row">
       {{#if Template.subscriptionsReady }}
-        {{#each products}}
+        {{#each favorites}}
           {{> favorite}}
         {{/each}}
       {{else}}
