--- a/imports/ui/orders/orders.html
+++ b/imports/ui/orders/orders.html
@@ -127,7 +127,7 @@
       <div class="row">
         <div class="col-xs-10 col-sm-10 col-md-6 col-lg-6">
           <label for="defaultAddress">Guardar como dirección principal</label>
-          <input type="checkbox" class="form-control" id="defaultAddress" placeholder="Guardar como dirección principal">
+          <input type="checkbox" id="defaultAddress" placeholder="Guardar como dirección principal">
         </div>
       </div>
       <div class="row">
@@ -161,7 +161,7 @@
       </div>
     </div>
   {{/each}}
-  <div class="col-xs-10 col-sm-10 col-md-6 col-lg-6">
+  <div class="col-xs-1 col-sm-1 col-md-3 col-lg-3">
     <a class="btn btn-primary address-form">Añadir nueva dirección</a>
   </div>
 </template>
