--- a/imports/ui/cart/cart.html
+++ b/imports/ui/cart/cart.html
@@ -33,7 +33,7 @@
               <h4><a href="/product/{{_id}}">{{product.name}}</a></h4>
               <p>$ {{product.price}}</p>
               <div class="row">
-                  <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+                  <div class="col-sm-1 col-md-1 col-lg-1"></div>
                   <button class="btn btn-default"> <span class="glyphicon glyphicon-shopping-cart"></span> Mover a Favoritos</button>
                   <button class="btn btn-default"> <span class="glyphicon glyphicon-trash"></span></button>
                   <a class="btn btn-default checkout" href="/orders/{{_id}}">Pagar solo este articulo</a>
