created orders details

--- a/imports/ui/orders/orders.html
+++ b/imports/ui/orders/orders.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="row">
-      {{#each products}}
+      {{#each cartProducts}}
         {{> order}}
       {{/each}}
     </div>
